syntax = "proto3";

package org.athenian;

option java_multiple_files = true;

service HelloService {
    rpc HiThere (HiRequest) returns (HiResponse);
}

message HiRequest {
    string query = 1;

    // extra properties to demonstrate how the code generator
    // works for repeated and map field types
    repeated string tags = 2;
    map<string, string> flags = 3;
}

message HiResponse {
    string result = 1;
}
